--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -2,15 +2,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>CEMAL APP</title>
-</head>
-<body>
-    <h1> WELCOME TO OUR APP</h1>
-    {% block content %}
-    {% endblock %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    {% block js %}
-    {% endblock %}
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+          content="Mobile app HTML landing page template to help you build a great online presence for your app which will convert visitors into users">
+    <meta name="author" content="Inovatik">
+
+    <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
+    <meta property="og:site_name" content="CEMAL APP"/> <!-- website name -->
+    <meta property="og:site" content=""/> <!-- website link -->
+    <meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
+    <meta property="og:description" content=""/> <!-- description shown in the actual shared post -->
+    <meta property="og:image" content=""/> <!-- image link, make sure it's jpg -->
+    <meta property="og:url" content=""/> <!-- where do you want your post to link to -->
+    <meta property="og:type" content="article"/>
+
+    <!-- Website Title -->
+    <title>KOAL APP</title>
+
+    <!-- Styles -->
+    <!-- Favicon  -->
+    <link rel="icon" href="images/favicon.png">
+</head>
+<body class="d-flex flex-column min-vh-100" data-spy="scroll" data-target=".fixed-top">
 </body>
 </html>
